--- a/WeatherBot/config.yml
+++ b/WeatherBot/config.yml
@@ -1,7 +1,7 @@
 language: en
 pipeline:
 - name: SpacyNLP
-  model: en_core_web_sm
+  model: en_core_web_md
   case_sensitive: false
 - name: SpacyTokenizer
 - name: SpacyFeaturizer
