--- a/WeatherBot/data/stories.yml
+++ b/WeatherBot/data/stories.yml
@@ -1,5 +1,5 @@
 stories:
-- story: interactive_story_0
+- story: interactive_story_1
   steps:
   - intent: greet
   - action: utter_greet
@@ -15,7 +15,7 @@ stories:
   - action: utter_thank_you
   - action: action_restart
 
-- story: interactive_story_1
+- story: interactive_story_2
   steps:
   - intent: greet
   - action: utter_greet
@@ -27,7 +27,7 @@ stories:
   - action: action_weather
   - action: action_restart
 
-- story: interactive_story_2
+- story: interactive_story_3
   steps:
   - intent: ask_weather
     entities:
@@ -113,3 +113,101 @@ stories:
   - action: utter_thank_you
   - action: utter_anything_else
   - action: action_restart
+  
+- story: story 8
+  steps:
+  - intent: greet
+  - action: utter_greet
+  - intent: ask_weather
+    entities:
+    - location: None
+  - action: utter_available_location
+  - intent: affirm
+  - action: action_weather
+  - intent: thank_you
+  - action: utter_thank_you
+  - action: utter_anything_else
+  - action: action_restart
+
+- story: story 9
+  steps:
+  - intent: greet
+  - action: utter_greet
+  - intent: ask_weather
+    entities:
+    - location: None
+  - action: utter_available_location
+  - intent: deny
+  - action: utter_ask_location
+  - intent: ask_weather
+    entities:
+    - location: Akure
+  - slot_was_set:
+    - location: Akure
+  - action: action_weather
+  - intent: thank_you
+  - action: utter_thank_you
+  - action: utter_anything_else
+  - action: action_restart
+
+- story: story 10
+  steps:
+  - intent: greet
+  - action: utter_greet
+  - action: utter_ask_user_name
+  - intent: tell_user_name
+    entities:
+    - user_name: Nathaniel
+  - slot_was_set:
+    - user_name: Nathaniel
+  - intent: ask_weather
+    entities:
+    - location: None
+  - action: utter_available_location
+  - intent: affirm
+  - action: action_weather
+  - intent: thank_you
+  - action: utter_thank_you
+  - action: utter_anything_else_user_name
+  - action: action_restart
+  
+
+- story: story 11
+  steps:
+  - intent: tell_user_name
+    entities:
+    - user_name: Nathaniel
+  - slot_was_set:
+    - user_name: Nathaniel
+  - action: utter_greet_user_name
+  - intent: ask_weather
+    entities:
+    - location: None
+  - action: utter_available_location
+  - intent: affirm
+  - action: action_weather
+  - intent: thank_you
+  - action: utter_thank_you
+  - action: utter_anything_else_user_name
+  - action: action_restart
+
+
+- story: story 12
+  steps:
+  - intent: tell_user_name
+    entities:
+    - user_name: Augustine
+  - slot_was_set:
+    - user_name: Augustine
+  - action: utter_greet_user_name
+  - intent: ask_weather
+    entities:
+    - location: Ikare
+  - slot_was_set:
+    - location: Ikare
+  - action: action_weather
+  - intent: thank_you
+  - action: utter_thank_you_user_name
+  - action: utter_anything_else
+  - action: action_restart
+
