--- a/WeatherBot/data/stories.yml
+++ b/WeatherBot/data/stories.yml
@@ -120,8 +120,6 @@ stories:
   - intent: greet
   - action: utter_greet
   - intent: ask_weather
-    entities:
-    - location: None
   - action: utter_available_location
   - intent: affirm
   - action: action_weather
@@ -135,8 +133,6 @@ stories:
   - intent: greet
   - action: utter_greet
   - intent: ask_weather
-    entities:
-    - location: None
   - action: utter_available_location
   - intent: deny
   - action: utter_ask_location
@@ -162,8 +158,6 @@ stories:
   - slot_was_set:
     - user_name: Nathaniel
   - intent: ask_weather
-    entities:
-    - location: None
   - action: utter_available_location
   - intent: affirm
   - action: action_weather
@@ -182,8 +176,6 @@ stories:
     - user_name: Nathaniel
   - action: utter_greet_user_name
   - intent: ask_weather
-    entities:
-    - location: None
   - action: utter_available_location
   - intent: affirm
   - action: action_weather
@@ -212,3 +204,268 @@ stories:
   - action: utter_anything_else
   - action: action_restart
 
+- story: story 13
+  steps:
+  - intent: greet
+  - action: utter_greet
+  - intent: ask_weather
+  - action: utter_available_location
+  - intent: deny
+  - action: utter_ok_user_name
+  - action: utter_ask_location
+  - intent: ask_weather
+    entities:
+    - location: Akure
+  - slot_was_set:
+    - location: Akure
+  - action: action_weather
+  - intent: thank_you
+  - action: utter_thank_you
+  - action: utter_anything_else_user_name
+  - action: action_restart
+  
+- story: story 14
+  steps:
+  - intent: tell_user_name
+  - action: utter_greet
+  - intent: ask_weather
+  - action: utter_available_location
+  - intent: deny
+  - action: utter_ok_user_name
+  - action: utter_ask_location
+  - intent: ask_weather
+    entities:
+    - location: Akure
+  - slot_was_set:
+    - location: Akure
+  - action: action_weather
+  - intent: thank_you
+  - action: utter_thank_you_user_name
+  - action: utter_anything_else
+  - action: action_restart
+  
+- story: interactive_story_15
+  steps:
+  - intent: greet
+  - action: utter_greet
+  - intent: ask_weather
+  - action: utter_ask_location
+  - intent: ask_weather
+    entities:
+    - location: Lekki
+  - slot_was_set:
+    - location: Lekki
+  - action: action_weather
+  - intent: thank_you
+  - action: utter_thank_you
+  - intent: goodbye_bot_name
+  - action: utter_goodbye
+  - action: action_restart
+
+- story: interactive_story_17
+  steps:
+  - intent: greet
+  - action: utter_greet
+  - intent: ask_weather
+    entities:
+    - location: Lagos
+  - slot_was_set:
+    - location: Lagos
+  - action: action_weather
+  - action: action_restart
+
+- story: interactive_story_18
+  steps:
+  - intent: ask_weather
+    entities:
+    - location: Lagos
+  - slot_was_set:
+    - location: Lagos
+  - action: action_weather
+  - action: action_restart
+  
+- story: story 19
+  steps:
+  - intent: ask_weather
+  - action: utter_ask_location
+  - intent: ask_weather
+    entities:
+    - location: Benue
+  - slot_was_set:
+    - location: Lagos
+  - action: action_weather
+  - action: action_restart
+  
+- story: interactive_story 20
+  steps:
+  - intent: ask_weather
+  - action: utter_ask_location
+  - intent: ask_weather
+    entities:
+    - location: Lekki
+  - slot_was_set:
+    - location: Lekki
+  - action: action_weather
+  - intent: thank_you
+  - action: utter_thank_you
+  - intent: goodbye
+  - action: utter_goodbye_user_name
+  - action: action_restart
+  
+- story: story 21
+  steps:
+  - intent: greet
+  - action: utter_greet
+  - intent: ask_weather
+  - action: utter_ask_location
+  - intent: ask_weather
+    entities:
+    - location: Akure
+  - slot_was_set:
+    - location: Akure
+  - action: action_weather
+  - action: action_weather
+  - intent: thank_you
+  - action: utter_thank_you
+  - action: action_restart
+
+- story: story 22
+  steps:
+  - intent: greet
+  - action: utter_greet
+  - intent: ask_bot_name
+  - action: utter_ask_user_name
+  - intent: tell_user_name
+    entities:
+    - user_name: Mary
+  - slot_was_set:
+    - user_name: Mary
+  - intent: ask_weather
+    entities:
+    - location: Akure
+  - slot_was_set:
+    - location: Akure
+  - action: action_weather
+  - action: action_weather
+  - intent: thank_you
+  - action: utter_thank_you
+  - action: action_restart
+
+- story: story 23
+  steps:
+  - intent: greet
+  - action: utter_greet
+  - intent: ask_bot_devloper_name
+  - action: utter_greet_botname_ask_user_name
+  - action: utter_bot_developer_name
+  - intent: ask_bot_developed_date_bot_name
+  - action: utter_bot_developed_date
+    entities:
+    - location: Akure
+  - action: action_weather
+  - slot_was_set:
+    - location: Akure
+  - action: action_weather
+  - intent: thank_you
+  - action: utter_thank_you
+  - action: action_restart
+
+- story: story 24
+  steps:
+  - intent: greet
+  - action: utter_greet
+  - intent: ask_bot_devloper_name
+  - action: utter_greet_botname_ask_user_name
+  - action: utter_bot_developer_name
+  - intent: ask_bot_developed_date_bot_name
+  - action: utter_bot_developed_date
+  - intent: ask_weather
+    entities:
+    - location: Akure
+  - action: action_weather
+  - slot_was_set:
+    - location: Akure
+  - action: action_weather
+  - intent: thank_you
+  - action: utter_thank_you
+  - action: action_restart
+
+- story: story 25
+  steps:
+  - intent: greet
+  - action: utter_ask_user_name
+  - action: utter_greet_user_name
+  - intent: ask_somthing_else_bot_name
+  - action: utter_not_really_user_name
+  - intent: ask_weather
+  - action: utter_ask_location
+  - intent: ask_weather
+    entities:
+    - location: Akure
+  - slot_was_set:
+    - location: Akure
+  - action: action_weather
+  - action: action_weather
+  - intent: thank_you
+  - action: utter_thank_you
+  - action: action_restart
+
+- story: story 26
+  steps:
+  - intent: greet
+  - action: utter_ask_user_name
+  - action: utter_greet_user_name
+  - intent: ask_weather
+  - action: utter_ask_location
+  - intent: ask_weather
+    entities:
+    - location: Akure
+  - slot_was_set:
+    - location: Akure
+  - action: action_weather
+  - action: action_weather
+  - intent: thank_you
+  - action: utter_thank_you
+  - intent: ask_somthing_else_bot_name
+  - action: utter_not_really_user_name
+  - action: action_restart
+
+- story: story 27
+  steps:
+  - intent: greet
+  - action: utter_ask_user_name
+  - action: utter_greet_user_name
+  - intent: ask_weather
+  - action: utter_ask_location
+  - intent: ask_weather
+    entities:
+    - location: Akure
+  - slot_was_set:
+    - location: Akure
+  - action: action_weather
+  - action: action_weather
+  - intent: thank_you
+  - action: utter_thank_you
+  - intent: ask_bot_developed_date_bot_name
+  - action: utter_bot_developed_date_user_name
+  - action: action_restart
+
+- story: story 28
+  steps:
+  - intent: greet
+  - action: utter_ask_user_name
+  - action: utter_greet_user_name
+  - intent: ask_bot_developed_date_bot_name
+  - action: utter_bot_developed_date_user_name
+  - intent: ask_weather
+  - action: utter_ask_location
+  - intent: ask_weather
+    entities:
+    - location: Akure
+  - slot_was_set:
+    - location: Akure
+  - action: action_weather
+  - action: action_weather
+  - intent: thank_you
+  - action: utter_thank_you
+  - action: action_restart
